--- a/public/stylesheets/partials/_waterfall.scss
+++ b/public/stylesheets/partials/_waterfall.scss
@@ -291,7 +291,7 @@
     }
 
     .below-reward-threshold-message {
-      color: #ff6666;
+      color: #ff0000;
       margin-left: 10px;
       font-size: 13px;
     }
@@ -344,7 +344,7 @@
 }
 
 .waterfall .below-reward-threshold {
-  border: 1px solid #ff6666;
+  border: 2px solid #ff6666;
 }
 
 
